# translate_service

./: Dockerfile  LICENSE  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
services/: rabbitmq_repository.py  translation_service.py  translator_service.py
